...
    <string name="events">Events</string>
    <string name="boton_rojo">Red Button</string>
    <string name="tv_DNI">Dependent ID</string>
    <string name="tv_dependent_name">Dependent\'s name</string>
    <string name="tv_email">E-mail</string>
    <string name="tv_passwd">Password</string>
    <string name="bt_login">Log In</string>
    <string name="bt_ok">OK</string>
    <string name="bt_cancel">Cancel</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_alerts">Alerts</string>
    <string name="title_activity_ubication">s</string>
    <string name="contacts_read_right_required">Permissions needed to keep working</string>
...
